Fix overflowing sections.

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   min-height: 100dvh;
   min-width: 100dvw;
+  overflow: hidden;
 }
 
 .App-header {
@@ -51,6 +52,7 @@
   flex: 1;
   margin-top: 113.59px;
   padding: var(--spacing--40);
+  overflow-x: auto;
   background-color: var(--color--white);
 }
 
@@ -75,7 +77,7 @@
   }
 
   .content-wrapper {
-    min-width: max(360px, 100dvw);
+    min-width: max(360px, calc(100dvw - var(--spacing--40) * 2));
   }
 }
 
@@ -86,7 +88,7 @@
   }
 
   .content-wrapper {
-    min-width: max(var(--mobile--width), 70dvw);
+    min-width: max(calc(var(--mobile--width) - var(--spacing--40) * 2), 70dvw);
     -webkit-filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, .1));
     filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, .1));
   }
