--- a/src/components/HeaderMenu.css
+++ b/src/components/HeaderMenu.css
@@ -23,7 +23,7 @@
   font-family: inherit;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 768px) {
   .header-menu {
     display: none;
   } 
